--- a/Eagle 2FA 响应式/index.html
+++ b/Eagle 2FA 响应式/index.html
@@ -14,8 +14,70 @@
 <body>
     <div class="banner">
         <div class="container flex">
-            <div>1</div>
-            <div>2</div>
+            <div class="flex">
+                <img src="imgs/nav.png" alt="" style='width:263px;height: 224px '>
+            </div>
+            <div>
+                <h2>Eagle 2FA</h2>
+                <h3>最好用的二次验证工具</h3>
+                <p>二次验证码快速添加，账户安全性双重提升</p>
+                <div class="btn-box">
+                    <a href="https://itunes.apple.com/cn/app/id1300115032?mt=8" target="_blank">
+                        <div class="btn" data-type='ios'>
+                            <div class="btn-r">
+                                <img src="imgs/IOS.png" alt="">
+                            </div>
+                            <div class="btn-l">
+                                <p>IOS客户端下载</p>
+                                <h2>App Store</h2>
+                            </div>
+                        </div>
+                    </a>
+                    <div style='position: relative;'>
+                        <div class="alert">
+                            <a href="https://play.google.com/store/apps/details?id=com.yicheng.eagletotpauth  " target="_blank">
+                                <div class="btn btn2" data-type='andr'>
+                                    <div class="btn-r">
+                                        <img src="imgs/googleplay.png" alt="">
+                                    </div>
+                                    <div class="btn-l">
+                                        <p style='font-size: 14px'>Google Play</p>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="http://tools.eaglewallet.io/coin/soft_version/5a95218925bd4.apk" target="_blank" class="down-in-web">
+                                <div class="btn btn2" data-type='andr' style='margin-top:1px;'>
+                                    <div class="btn-r">
+                                        <img src="imgs/down.png" alt="">
+                                    </div>
+                                    <div class="btn-l">
+                                        <p style='font-size: 14px'>直接下载</p>
+                                    </div>
+                                </div>
+                            </a>
+                            <div class="down-in-wx">
+                                <div class="btn btn2" data-type='andr' style='margin-top:1px;'>
+                                    <div class="btn-r">
+                                        <img src="imgs/down.png" alt="">
+                                    </div>
+                                    <div class="btn-l">
+                                        <p style='font-size: 14px'>直接下载</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="btn" data-type='andr' id="andr">
+                            <div class="btn-r">
+                                <img src="imgs/Android.png" alt="">
+                            </div>
+                            <div class="btn-l">
+                                <p>安卓客户端下载</p>
+                                <h2>Android</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="con">
@@ -24,35 +86,61 @@
                 <p>多验证码管理</p>
                 <p>支持拖动排序、左滑管理</p>
             </div>
-            <div>
+            <div class="flex">
                 <img src="imgs/1.png" alt="">
             </div>
         </div>
     </div>
-    <div class="con">
+    <div class="con" style='background: #F8F9FD'>
         <div class="container flex" style='flex-wrap: wrap-reverse;'>
-            <div>
-                <img src="imgs/1.png" alt="">
+            <div class="flex">
+                <img src="imgs/2.png" alt="">
             </div>
             <div>
-                <p>多验证码管理</p>
-                <p>支持拖动排序、左滑管理</p>
+                <p>导出备份</p>
+                <p>批量导出，本地备份</p>
             </div>
         </div>
     </div>
     <div class="con">
         <div class="container flex">
             <div>
-                <p>多验证码管理</p>
-                <p>支持拖动排序、左滑管理</p>
+                <p>开启安全锁</p>
+                <p>更安全地保护您的账户信息</p>
+            </div>
+            <div class="flex">
+                <img src="imgs/3.png" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="con" style='background: #F8F9FD'>
+        <div class="container flex" style='flex-wrap: wrap-reverse;'>
+            <div class="flex">
+                <img src="imgs/4.png" alt="">
             </div>
             <div>
-                <img src="imgs/1.png" alt="">
+                <p>可与多个提供商搭配使用</p>
+                <p>多帐号，多设备</p>
             </div>
         </div>
     </div>
     <div class="footer">
         Copyright ©2018 Eagle 2FA All Rights Reserved
+    </div>
+    <div class="wxtip">
+        <img src="imgs/weixin-tip.png" class="wxtip-icon">
+        <p class="wxtip-txt">
+            为了更好的浏览体验
+            <br/> 请选择在浏览器中打开
+        </p>
+        <img src="imgs/logo.png" alt="" class="wx-logo">
+        <h2>Eagle 2FA</h2>
+        <h3>最好用的两次验证工具</h3>
+    </div>
+    <div class="code">
+        <div class="container">
+            <img src="imgs/code.png" alt="">
+        </div>
     </div>
 </body>
 <script>
@@ -70,6 +158,11 @@ if (is_weixn()) {
 $('.down-in-wx').click(function() {
     $('.wxtip').show()
 })
+if (IsPC()) {
+    $('.code').show()
+} else {
+    $('.code').hide()
+}
 
 function is_weixn() {
     var ua = navigator.userAgent.toLowerCase();
@@ -78,6 +171,22 @@ function is_weixn() {
     } else {
         return false;
     }
+}
+
+function IsPC() {
+    var userAgentInfo = navigator.userAgent;
+    var Agents = ["Android", "iPhone",
+        "SymbianOS", "Windows Phone",
+        "iPad", "iPod"
+    ];
+    var flag = true;
+    for (var v = 0; v < Agents.length; v++) {
+        if (userAgentInfo.indexOf(Agents[v]) > 0) {
+            flag = false;
+            break;
+        }
+    }
+    return flag;
 }
 </script>
 
