--- a/Eagle 2FA 响应式/index.html
+++ b/Eagle 2FA 响应式/index.html
@@ -113,10 +113,10 @@
             </div>
         </div>
     </div>
-    <div class="con" style='background: #F8F9FD'>
+    <div class="con" style='background: #F8F9FD;padding: 50px 0;'>
         <div class="container flex" style='flex-wrap: wrap-reverse;'>
             <div class="flex">
-                <img src="imgs/4.png" alt="">
+                <img src="imgs/4.png" alt="" style='width: 380px;height: 230px;'>
             </div>
             <div>
                 <p>可与多个提供商搭配使用</p>
