--- a/Eagle 2FA 响应式/index.html
+++ b/Eagle 2FA 响应式/index.html
@@ -15,13 +15,64 @@
     <div class="banner">
         <div class="container flex">
             <div class="flex">
-                <img src="imgs/nav.png" alt="" style='width:263px;height: 224px '>
+                <img src="imgs/nav.png" alt="" style='width:346px;height: 322px '>
             </div>
             <div>
-                <h2>Eagle 2FA</h2>
-                <h3>最好用的二次验证工具</h3>
-                <p>二次验证码快速添加，账户安全性双重提升</p>
-                <div class="btn-box">
+                <h2 class="center">Eagle 2FA</h2>
+                <h3 class="center">最好用的二次验证工具</h3>
+                <p class="center">二次验证码快速添加，账户安全性双重提升</p>
+                <div class="btn-box-pc">
+                    <div>
+                        <a href="https://itunes.apple.com/cn/app/id1300115032?mt=8" target="_blank">
+                            <div class="btn" data-type='ios'>
+                                <div class="btn-r">
+                                    <img src="imgs/IOS.png" alt="">
+                                </div>
+                                <div class="btn-l">
+                                    <p>IOS客户端下载</p>
+                                    <h2>App Store</h2>
+                                </div>
+                            </div>
+                        </a>
+                        <div style='position: relative;'>
+                            <div class="btn andr1" data-type='andr' style='margin-top: 15px;'>
+                                <div class="btn-r">
+                                    <img src="imgs/Android.png" alt="">
+                                </div>
+                                <div class="btn-l">
+                                    <p>安卓客户端下载</p>
+                                    <h2>Android</h2>
+                                </div>
+                            </div>
+                            <div class="alert">
+                                <a href="http://tools.eaglewallet.io/coin/soft_version/5a95218925bd4.apk" target="_blank" class="down-in-web">
+                                    <div class="btn btn2" data-type='andr'>
+                                        <div class="btn-r">
+                                            <img src="imgs/down.png" alt="">
+                                        </div>
+                                        <div class="btn-l">
+                                            <p style='font-size: 14px'>直接下载</p>
+                                        </div>
+                                    </div>
+                                </a>
+                                <a href="https://play.google.com/store/apps/details?id=com.yicheng.eagletotpauth  " target="_blank">
+                                    <div class="btn btn2" data-type='andr' style='margin-top:1px;'>
+                                        <div class="btn-r">
+                                            <img src="imgs/googleplay.png" alt="">
+                                        </div>
+                                        <div class="btn-l">
+                                            <p style='font-size: 14px'>Google Play</p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="imgs/code.png" alt="" style='width: 140px;height: 140px;margin-left: 26px;'>
+                    </div>
+                </div>
+                <div class="btn-box-move">
                     <a href="https://itunes.apple.com/cn/app/id1300115032?mt=8" target="_blank">
                         <div class="btn" data-type='ios'>
                             <div class="btn-r">
@@ -34,39 +85,7 @@
                         </div>
                     </a>
                     <div style='position: relative;'>
-                        <div class="alert">
-                            <a href="https://play.google.com/store/apps/details?id=com.yicheng.eagletotpauth  " target="_blank">
-                                <div class="btn btn2" data-type='andr'>
-                                    <div class="btn-r">
-                                        <img src="imgs/googleplay.png" alt="">
-                                    </div>
-                                    <div class="btn-l">
-                                        <p style='font-size: 14px'>Google Play</p>
-                                    </div>
-                                </div>
-                            </a>
-                            <a href="http://tools.eaglewallet.io/coin/soft_version/5a95218925bd4.apk" target="_blank" class="down-in-web">
-                                <div class="btn btn2" data-type='andr' style='margin-top:1px;'>
-                                    <div class="btn-r">
-                                        <img src="imgs/down.png" alt="">
-                                    </div>
-                                    <div class="btn-l">
-                                        <p style='font-size: 14px'>直接下载</p>
-                                    </div>
-                                </div>
-                            </a>
-                            <div class="down-in-wx">
-                                <div class="btn btn2" data-type='andr' style='margin-top:1px;'>
-                                    <div class="btn-r">
-                                        <img src="imgs/down.png" alt="">
-                                    </div>
-                                    <div class="btn-l">
-                                        <p style='font-size: 14px'>直接下载</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="btn" data-type='andr' id="andr">
+                        <div class="btn andr1" data-type='andr'>
                             <div class="btn-r">
                                 <img src="imgs/Android.png" alt="">
                             </div>
@@ -75,52 +94,85 @@
                                 <h2>Android</h2>
                             </div>
                         </div>
+                        <div class="alert">
+                            <div class="down-in-wx">
+                                <div class="btn btn2" data-type='andr'>
+                                    <div class="btn-r">
+                                        <img src="imgs/down.png" alt="">
+                                    </div>
+                                    <div class="btn-l">
+                                        <p style='font-size: 14px'>直接下载</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <a href="https://play.google.com/store/apps/details?id=com.yicheng.eagletotpauth  " target="_blank">
+                                <div class="btn btn2" data-type='andr' style='margin-top:1px;'>
+                                    <div class="btn-r">
+                                        <img src="imgs/googleplay.png" alt="">
+                                    </div>
+                                    <div class="btn-l">
+                                        <p style='font-size: 14px'>Google Play</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="con">
+    <div class="con con1">
         <div class="container flex">
             <div>
-                <p>多验证码管理</p>
-                <p>支持拖动排序、左滑管理</p>
+                <p class="center">多验证码管理</p>
+                <p class="center">支持拖动排序、左滑管理</p>
             </div>
             <div class="flex">
                 <img src="imgs/1.png" alt="">
             </div>
         </div>
     </div>
-    <div class="con" style='background: #F8F9FD'>
+    <div class="con con2" style='background: #F8F9FD'>
         <div class="container flex" style='flex-wrap: wrap-reverse;'>
             <div class="flex">
                 <img src="imgs/2.png" alt="">
             </div>
             <div>
-                <p>导出备份</p>
-                <p>批量导出，本地备份</p>
+                <p class="center">导出备份</p>
+                <p class="center">批量导出，本地备份</p>
             </div>
         </div>
     </div>
-    <div class="con">
+    <div class="con con3">
         <div class="container flex">
             <div>
-                <p>开启安全锁</p>
-                <p>更安全地保护您的账户信息</p>
+                <p class="center">开启安全锁</p>
+                <p class="center">更安全地保护您的账户信息</p>
             </div>
             <div class="flex">
                 <img src="imgs/3.png" alt="">
             </div>
         </div>
     </div>
-    <div class="con" style='background: #F8F9FD;padding: 50px 0;'>
+    <div class="con con4" style='background: #F8F9FD;padding: 90px 0;'>
         <div class="container flex" style='flex-wrap: wrap-reverse;'>
             <div class="flex">
-                <img src="imgs/4.png" alt="" style='width: 380px;height: 230px;'>
+                <img src="imgs/4.png" alt="" style='width: 225px;height: 235px;'>
             </div>
             <div>
-                <p>可与多个提供商搭配使用</p>
-                <p>多帐号，多设备</p>
+                <p class="center">无需联网</p>
+                <p class="center">无注册登录，离线生成验证码</p>
+            </div>
+        </div>
+    </div>
+    <div class="con con5" style='padding: 100px 0;'>
+        <div class="container flex">
+            <div>
+                <p class="center">多平台，多账户</p>
+                <p class="center">可同时用于多个平台多个账户</p>
+            </div>
+            <div class="flex">
+                <img src="imgs/5.png" alt="" style='width: 380px;height: 230px;'>
             </div>
         </div>
     </div>
@@ -137,14 +189,9 @@
         <h2>Eagle 2FA</h2>
         <h3>最好用的两次验证工具</h3>
     </div>
-    <div class="code">
-        <div class="container">
-            <img src="imgs/code.png" alt="">
-        </div>
-    </div>
 </body>
 <script>
-$('#andr').click(function() {
+$('.andr1').click(function() {
     if ($('.alert').css('display') === 'block') {
         $('.alert').css('display', 'none')
     } else {
@@ -160,8 +207,15 @@ $('.down-in-wx').click(function() {
 })
 if (IsPC()) {
     $('.code').show()
+    $('.btn-box-pc').show()
+    $('.btn-box-move').hide()
+    $('.center').removeClass('tac')
 } else {
     $('.code').hide()
+    $('.btn-box-pc').hide()
+    $('.btn-box-move').show()
+    $('.center').addClass('tac')
+    $('.banner').addClass('padding20')
 }
 
 function is_weixn() {
