--- a/Eagle 2FA 响应式/index.html
+++ b/Eagle 2FA 响应式/index.html
@@ -105,8 +105,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="http://tools.eaglewallet.io/coin/soft_version/5a95218925bd4.apk" class="down-in-web">
-                                    <div class="btn btn2 android" data-type='andr'>
+                            <a href="http://tools.eaglewallet.io/coin/soft_version/5a95218925bd4.apk" class="down-in-web android">
+                                    <div class="btn btn2" data-type='andr'>
                                         <div class="btn-r">
                                             <img src="imgs/down.png" alt="">
                                         </div>
