--- a/Eagle 2FA 响应式/index.html
+++ b/Eagle 2FA 响应式/index.html
@@ -128,6 +128,7 @@
                         </div>
                     </div>
                 </div>
+                <p class="add-text center">版本：V1.1.0   兼容谷歌身份验证器</p>
             </div>
         </div>
     </div>
@@ -148,8 +149,8 @@
                 <img src="imgs/2.png" alt="">
             </div>
             <div>
-                <p class="center">导出备份</p>
-                <p class="center">批量导出，本地备份</p>
+                <p class="center">导出功能</p>
+                <p class="center">批量导出，本地备份，随时恢复</p>
             </div>
         </div>
     </div>
@@ -175,7 +176,7 @@
             </div>
         </div>
     </div>
-    <div class="con con5" style='padding: 100px 0;'>
+   <!--  <div class="con con5" style='padding: 100px 0;'>
         <div class="container flex">
             <div>
                 <p class="center">多平台，多账户</p>
@@ -185,7 +186,7 @@
                 <img src="imgs/5.png" alt="" style='width: 380px;height: 230px;'>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="footer">
         Copyright ©2018 Eagle 2FA All Rights Reserved
     </div>
