--- a/Eagle 2FA 响应式/index.html
+++ b/Eagle 2FA 响应式/index.html
@@ -128,7 +128,7 @@
                         </div>
                     </div>
                 </div>
-                <p class="add-text center">版本：V1.1.0   兼容谷歌身份验证器</p>
+                <p class="add-text center">版本：V1.1.0   兼容Google身份验证器</p>
             </div>
         </div>
     </div>
