--- a/ob/index.html
+++ b/ob/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>firstvue</title>
+  <title> demo </title>
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.2.min.js"></script>
   <script>window.jQuery || document.write('<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"><\/script>')</script>
 </head>
