--- a/小狗帮助中心/index.html
+++ b/小狗帮助中心/index.html
@@ -45,7 +45,7 @@
         </div>
     </div>
     <div class="section">
-        <h2 class="clearfix">四.充值数字货币到小狗钱包，为什么充值的平台提示转账成功，但是过了很久小狗钱包还没有到账？<span class="icon-bottom"></span></h2>
+        <h2 class="clearfix">四.为什么充值后很久未到账？<span class="icon-bottom"></span></h2>
         <div>
             <p>
                 您好！区块链资产转账分为三个步骤：提出-区块确认-入账；
